Allow UoM in ItemStateConditions
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>